<?php

declare(strict_types=1);

namespace zhang\command\extend;

interface Command
{
    public function execute();
}
